HelloUltraviolet/Fixtures/RejectedSource/Expressions/RaceStreamHandlerTypeMismatch/Expected.uv
//! Expected diagnostic metadata for the RaceStreamHandlerTypeMismatch rejected-source specimen.

expectedDiagnostic("E-CON-0261", "rule.21.Race-Stream-Handler-Type-Err")
